--- a/.htaccess
+++ b/.htaccess
@@ -4,7 +4,7 @@ RewriteCond %{REQUEST_FILENAME} -f [OR]
 RewriteCond %{REQUEST_FILENAME} -d
 RewriteRule ^ - [L]
 
-# Si no existe, envía todo a index.html
+# Si no existe, envía todo a index
 RewriteRule ^ index.html [L]
 
 <filesMatch "\.(html|htm|js|css|php)$">
